Layout: Added CSS to avoid horizontal scrollbar jumps of the entire content when switching between short and long pages.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -48,6 +48,12 @@
 
 /* ===== General ========================== */
 
+html {
+    /* Avoid scrollbar jumps: https://aykevl.nl/2014/09/fix-jumping-scrollbar */
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+}
+
 body {
     font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, ui-sans-serif, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
